--- a/cv.rmd
+++ b/cv.rmd
@@ -17,6 +17,15 @@ TODO
 * add languages extra
 * adjust fonts, colors and style
 * find a picture
+* identify and define process for tailor CV for specific applications
+* version code?
+  * that way tailored CVs could relate to a specific CV
+
+# Tailoring CV
+
+Ideas
+* copy & adjust spreadsheet and run script by adjusting spreadsheet link
+* if code needs to be adjusted, could be done via a branch or copy of code saved along with CV
 -->
 
 ```{r, include=FALSE}
@@ -31,9 +40,9 @@ source("cv_printing_functions.r")
 # Read in all data and initialize a CV printer object
 CV <- create_CV_object(
   data_location = "https://docs.google.com/spreadsheets/d/1KcTSyanKHQ1jGnwVd6AxMcb3zXLvt-2RKzsPOfmI5Cw/edit#gid=917338460",  
-  pdf_mode = params$pdf_mode
+  pdf_mode = params$pdf_mode,
+  sheet_is_publicly_readable = FALSE
 )
-
 ```
 
 
@@ -55,7 +64,7 @@ Aside
 
 <!-- Swap image with your preferred logo -->
 <!--![logo](https://cran.r-project.org/Rlogo.svg){width=100%}-->
-```{r echo=FALSE, fig.asp=1, message=FALSE, warning=FALSE}
+```{r eval=FALSE, fig.asp=1, message=FALSE, warning=FALSE, include=FALSE}
 # based on R Graph Galary
 # https://www.r-graph-gallery.com/294-basic-ridgeline-plot.html#
 
@@ -64,7 +73,7 @@ library(ggridges)
 library(ggplot2)
 library(viridis)
 
-sidebar_color <- "#f7fbff"
+sidebar_color <- "#f2f2f1"
 
 # Plot
 ggplot(lincoln_weather, aes(x = `Mean Temperature [F]`, y = `Month`, fill = ..x..)) +
@@ -110,7 +119,7 @@ Language Skills {#skills}
 --------------------------------------------------------------------------------
 
 ```{r}
-CV %>% print_skill_bars()
+CV %>% print_skill_bars(bar_color = "#274b9f")
 ```
 
 
@@ -132,9 +141,13 @@ Main
 Thomas Lieb {#title}
 --------------------------------------------------------------------------------
 
+### Impact-driven Data Enthusiast
+
+
 ```{r}
 # Note the special double pipe so we modify the CV object in place
 CV %<>% print_text_block("intro") 
+##a8a7a7
 ```
 
 
