--- a/cv.rmd
+++ b/cv.rmd
@@ -39,11 +39,17 @@ library(magrittr) # For the pipe
 source("cv_printing_functions.r")
 
 # Read in all data and initialize a CV printer object
-CV <- create_CV_object(
+offline <- T
+if (!offline) {
+  CV <- create_CV_object(
   data_location = "https://docs.google.com/spreadsheets/d/1KcTSyanKHQ1jGnwVd6AxMcb3zXLvt-2RKzsPOfmI5Cw/edit#gid=917338460",  
   pdf_mode = params$pdf_mode,
   sheet_is_publicly_readable = FALSE
-)
+  )
+  saveRDS(CV, "CV.RDS")
+} else {
+  CV <- readRDS("CV.RDS")
+}
 ```
 
 
@@ -110,10 +116,11 @@ if(params$pdf_mode){
 Contact {#contact}
 --------------------------------------------------------------------------------
 
+<p style="line-height:1.6;margin-top:5px">
 ```{r}
 CV %>% print_contact_info()
 ```
-
+<p>
 
 
 Language Skills {#skills}
