--- a/cv.rmd
+++ b/cv.rmd
@@ -93,12 +93,9 @@ if (FALSE) {
 CV %>% print_image_html()
 ```
 
-```{r}
-if(params$pdf_mode){
-  cat('[View an online version of my CV](https://htmlpreview.github.io/?https://github.com/rietho/cv/blob/main/cv.html){target="_blank"}')
-} else {
-  cat(r"{[<i class='fas fa-download'></i> Download a PDF of this CV](https://github.com/rietho/cv/raw/main/cv.pdf){target="_blank"}}")
-}
+```{r link_online_version}
+mode <- ifelse(params$pdf_mode, "pdf", "html")
+CV %>% print_online_version_text(mode)
 ```
 
 Contact {#contact}
