--- a/cv.rmd
+++ b/cv.rmd
@@ -171,10 +171,13 @@ CV %>% print_languages_table()
 Disclaimer {#disclaimer}
 --------------------------------------------------------------------------------
 
-Made with the R package [pagedown](https://github.com/rstudio/pagedown){target="_blank"}.<br>
-Source code available on [Github](https://github.com/rietho/cv){target="_blank"}.<br>
-Last updated on `r Sys.Date()`.
-
+Made with the R package [pagedown](https://github.com/rstudio/pagedown){target="_blank"}.
+<br>Source code available on [Github](https://github.com/rietho/cv){target="_blank"}.
+```{r last_updated_date}
+if (CV$settings$show_last_updated_date) {
+  cat(glue::glue("<br>Last updated on {Sys.Date()}."))
+}
+```
 
 # Main
 
