--- a/cv.rmd
+++ b/cv.rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 params:
   pdf_mode:
     value: false
-  version: '1.0.1' # format: x.y.z
+  version: '1.0.2' # format: x.y.z
 output:
   pagedown::html_resume:
     # note: order here matters, the latter overrides the former
@@ -24,7 +24,7 @@ Tailoring CV for specific applications
 ```
 
 ```{r cv_data_url, include = FALSE}
-cv_data_url <- "https://docs.google.com/spreadsheets/d/1KcTSyanKHQ1jGnwVd6AxMcb3zXLvt-2RKzsPOfmI5Cw/edit#gid=917338460"
+cv_data_url <- "https://docs.google.com/spreadsheets/d/1KcTSyanKHQ1jGnwVd6AxMcb3zXLvt-2RKzsPOfmI5Cw/edit#gid=1966984058"
 
 # use url from local .Renviron file instead, if present
 if (nchar(Sys.getenv("CV_DATA_URL")) > 0) {
@@ -126,11 +126,11 @@ Advanced Tech Skills {#main_tech_skills}
 --------------------------------------------------------------------------------
 -->
 ```{r advanced_tech_skills}
-CV %<>% print_text("header_adv_tech_skills", "plain",'  {#main_tech_skills}')
-cat("\n--------------------------------------------------------------------------------\n")
-CV %>% print_skill_bars(
-  bar_color = css_root$`--main-color-headers`, 
-  bar_background = css_root$`--main-color-skillbar-background`)
+# CV %<>% print_text("header_adv_tech_skills", "plain",'  {#main_tech_skills}')
+# cat("\n--------------------------------------------------------------------------------\n")
+# CV %>% print_skill_bars(
+#   bar_color = css_root$`--main-color-headers`, 
+#   bar_background = css_root$`--main-color-skillbar-background`)
 ```
 
 
@@ -278,7 +278,7 @@ Made with the R package [pagedown](https://github.com/rstudio/pagedown){target="
 <br>Source code available on [Github](https://github.com/rietho/cv){target="_blank"}.
 ```{r last_updated_date_and_version}
 cat('<br>')
-if (!CV$settings$show_last_updated_date) {
+if (CV$settings$show_last_updated_date) {
   cat(glue::glue("Last updated on {Sys.Date()} | "))
 }
 cat(v_txt)
